base/nemo/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nemo-guardrails
  labels:
    opendatahub.io/dashboard: "true"
