base/nemo/networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ipp-to-nemo
  namespace: nemo-guardrails
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: nemo-guardrails
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: openshift-ingress
      ports:
        - port: 8000
          protocol: TCP
  policyTypes:
    - Ingress
